crates/toml_edit/tests/fixtures/invalid/duplicate-key-dotted-into-std.stderr
TOML parse error at line 5, column 1
  |
5 | apple.color = "red"
  | ^
Duplicate key `color`

